src/scss/blocks/_sections.scss
//---------------------------------------------sections
.section {
	position: relative;

	width: 100%;
	height: 100vh;

	font-size: 1rem;
}

.section--dark {
	background-color: $black_2;
}

.section__wrap {
	// @extend %global_flex_block_row_nowrap_flex-start_stretch;

	width: 100%;
	height: 100%;

	@include bp($point_6, min) {
		@include flex_block(row, nowrap, flex-start, stretch);
	}

	@include bp($point_6 - 1) {
		@include flex_block(column, nowrap, flex-start, stretch);
	}
}

.section__wrap--cl {
	@include bp($point_3, $point_6){
		flex-direction: column;
		flex-wrap: wrap;
	}
}

.section_bg_wrap {

}

.section_bg {
	display: block;

	font-size: 0;

	@include bp($point_2, min) {
		flex: 0 1 64rem;

		width: 64rem;
	}

	@include bp($point_6, min) {
		height: 100%;
	}

	@include bp($point_3, $point_6) {
		flex: 0 1 80.58rem;

		width: 80.58rem;
	}

	@include bp($point_6 - 1) {
		width: 100%;

		order: 4;
	}
}

.section_bg--cl {
	@include bp($point_3, $point_6) {
		flex-grow: 1;
	}
}

.section_bg__img {
	@extend %cover_img;
}

